# xmcalc

./: .gitignore  .gitlab-ci.yml  AGENTS.md  Makefile.am  README.md  actions.c  configure.ac  math.c  meson.build  xcalc.c  xcalc.h  xmcalc.c  xmcalc.h
app-defaults/: XCalc  XCalc-color  XmCalc  XmCalc-color
data/: xmcalc.desktop
man/: Makefile.am  xcalc.man  xmcalc.man
